general styling and content edits

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 <!-- ======== MINI-MASTHEAD END/ ========= -->
 
 <!-- ============= WRAPPER ================== -->
-<div class="wrapper" style="padding-bottom: 50px; padding-top: 50px;">
+<div class="wrapper" style="padding-bottom: 50px; padding-top: 40px;">
 
     <!-- ============= CONTENT ============== --> 
     <section class="content-about">
@@ -127,10 +127,10 @@
               
             </div>
           </div>
-          <div class="px-1 pt-0 my-0 text-center">
+          <div class="px-1 pt-5 my-0 text-center">
             <h1 class="h-4 text-red text-roboto text-uppercase">#1 Home Repair</h1>
             <div class="col-md-8 mx-auto">
-              <p class="lead mb-4">We are a home remodel company with decades of experience providing solutions to our clients. We are a family owned and operated company serving the Western PA area. Licensed and fully insured. We look forward to earning your business</p>
+              <p class="lead mb-4">We are a home remodel company with decades of experience providing solutions for our clients. We are a family owned and operated company serving the Western PA area. Licensed and fully insured. We look forward to earning your business</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
                 <a href="services.html" class="btn-outline">Services</a>
                 <a href="contact-brm.html" class="btn-outline">Connect</a>
@@ -144,10 +144,11 @@
       <div class="contact">
         <div class="contact-container">
 
+
           <!-- mailing address  -->
           <div class="contact-card">
             <div class="card-info">
-              <h3><span><i class="fa-regular fa-address-card"></i></span>Mailing Address:</h3>  
+              <h3 class="baseline"><span><i class="fa-regular fa-address-card"></i></span>Mailing Address:</h3>  
               <p><strong> BRM Contractors Inc</strong><br>PO Box 66 <br>Hannastown, PA 15635 </p>
             </div>
           </div>
@@ -163,28 +164,22 @@
           <!-- email  -->
           <div class="contact-card">
             <div class="card-info">
-              <h3><span><i class="fa-sharp fa-solid fa-at"></i></span>Email:</h3>
+              <h3 class="baseline"><span><i class="fa-sharp fa-solid fa-at"></i></span>Email:</h3>
               <p>brianrmcgee@gmail.com </p>
             </div>
           </div>
   
           <!-- payments  -->
             <div class="contact-card contact-group">
-
-                <div class="card-info card-title">
-                  <h3><span><i class="fa-solid fa-money-bill-1"></i></span>Payments:</h3>
-                  <ul>
-                    <li>Cash</li>
-                    <li>Check</li>
-                    <li>Credit</li>
-                  </ul>
-                </div>
-
-                <div class="card-img">
-                  <img src="assets/logo/card-logos.JPG" alt="Visa/MasterCard/Discover/AX Logo" class="" style="height:100px;width:90px;">
-                </div> 
-
+              <div class="card-info card-title">
+                <h3  class="baseline"><span><i class="fa-solid fa-money-bill-1"></i></span>Payments:</h3>
+                <p>Cash - Check - Credit</p>
+              </div>
+              <div class="card-img">
+                <img src="assets/logo/card-logos.JPG" alt="Visa/MasterCard/Discover/AX Logo" class="mx-auto d-block" style="height:60px;width:65px;">
+              </div> 
             </div>
+
           </div>  
         </div>
       </div>
@@ -198,7 +193,7 @@
             <p class="lead text-dark text-mont py-3">Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
             </p>
             <div class="sidebar-img text-center">
-              <img src="assets/logo/sheild-handy.jpg" class="" alt="Total Service by BRM" style="width:100px;">
+              <img src="assets/logo/sheild-handy.jpg" class="" alt="Total Service by BRM" style="width:190px;">
             </div>
           </div>
           <div class="sidebar-title">
