--- a/contact-brm.html
+++ b/contact-brm.html
@@ -128,9 +128,9 @@
   <!-- ========== MINI-MASTHEAD =========== -->
   <div class="mini-masthead">
     <div class="mini-container container">
-      <h3>Connect with Us</h3>
+      <!-- <h3>Connect with Us</h3>
       <h1>BRM Contractors Inc</h1>
-      <h2>Questions - We have answers .. Connect with BRM</h2>
+      <h2>Questions - We have answers .. Connect with BRM</h2> -->
     </div>
 </div>
 <!-- ======== MINI-MASTHEAD END/ ========= -->
@@ -138,11 +138,15 @@
     <div class="connect-container" style="padding-bottom: 300px;">
         <div class="connect-heading">
             <div class="connect-content">
-                <h1>Connect with BRM</h1> 
-                <p >Leave us your information and a brief description of the services needed and we would be happy to get back with you.</p>
-                <img class="rounded mx-auto-d-block" src="assets/logo/free-estimate.png" alt="BRM" style="width:200px;">   
+              <div class="img-box">
+                <img class="" src="assets/logo/free-estimate.png" alt="BRM" style="width:200px;">   
+              </div> 
+              <h1>Connect with BRM</h1> 
+              <p >Have questions? - We've got the answers. Leave us your information and a brief description of the services needed and we would be happy to get back with you.</p>
             </div>
         </div>
+
+
         <div class="connect-form">
          <!-- ============= JOTFORM =================== -->
          <form class="jotform-form" action="https://submit.jotform.com/submit/230252966314151/" method="post" name="form_230252966314151" id="230252966314151" accept-charset="utf-8" autocomplete="on"><input type="hidden" name="formID" value="230252966314151" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden" id="cardinalOrderNumber" value="" />
@@ -197,23 +201,13 @@
 
 <!-- ============ FOOTER ============== -->
 <footer id="footer" class="footer-bar">
-  <div class="footer-content position-relative">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-10 col-md-12">
-          <div class="footer-info">
-            <div class="left">
-              <h3>BRM Contractors Inc</h3>
-            </div>
-            <div class="right">
-              <h4>724.787.3758</h4>
-            </div>  
-          </div>
-        </div>
+    <div class="footer-info">
+      <div class="left">
+        <h3>BRM Contractors Inc</h3>
       </div>
-    </div>
-  </div>
-  
+      <div class="right">
+        <h4>724.787.3758</h4>
+      </div>  
 </footer>
 <!-- =========== FOOTER END/=========== -->
 
