--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- site under construction brian mcgee 2023  -->
+<!-- site under construction brian mcgee @ BRM.dev 2023  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no">
 
-<title>Home -  BRM Contractors Inc</title>
+<title>BRM Contractors Inc</title>
 <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
 <!-- Latest compiled and minified CSS -->
@@ -106,7 +107,7 @@
   <div class="masthead-container">
     <h3>Quality craftsmanship</h3>
     <h1>Excellent Service</h1>
-    <h2>Drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. </h2>
+    <h2>Drywall and painting, anything wood, bathrooms, roofing and siding and all sorts of remodeling.</h2>
     <a href="contact-brm.html" class="btn-outline-red">FREE ESTIMATE</a>
     <div class="block-text">
       <p>Total home repair</p>
@@ -129,10 +130,7 @@
     <div class="main-content px-4 pt-0 my-0 text-center border-bottom">
       <h1>The incredible handyman</h1>
       <div class="main-content-info col-md-8 mx-auto">
-        <p class="lead mb-4">Chances are if it's broke - we can fix it. Give us a call today 
-          and one of our technicians will arrive and diagnose the problem. Provide insight 
-          and a solution. With over 20 years in the construction industry BRM has you covered. 
-          We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
+        <p class="lead mb-4">Chances are if it's broke - we can fix it. Give us a call today and one of our technicians will arrive and diagnose the problem. Provide insight and offer a solution. We are a home remodel company with decades of experience providing solutions to our clients. Home in need of some repairs, BRM has you covered. We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
           <a href="services.html" class="btn-outline">Services</a>
           <a href="contact-brm.html" class="btn-outline">Connect</a>
@@ -148,7 +146,7 @@
   <div class="sidebar">
     <div class="sidebar-card ">
       <div class="sidebar-info">
-        <p class="lead text-dark text-mont py-3">Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
+        <p>Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
         </p>
         <div class="sidebar-img text-center">
           <img src="assets/logo/sheild-handy.jpg" class="" alt="Total Service by BRM" style="width:100px;">
@@ -166,14 +164,11 @@
   <!-- ============ AD =================== -->
   <div class="ad">
     <div class="ad-card ">
-      <div class="ad-img">
-        <img style="max-width:266px;" src="assets/logo/free-estimate.png" alt="Total Service by BRM">
+      <div class="ad-img img-box">
+        <img class="" style="width:248px;" src="assets/logo/free-estimate.png" alt="Total Service by BRM">
       </div>
       <div class="ad-info">
-        <p class="lead text-dark text-mont py-3">With over 20 years experience solving home repair problems BRM has you covered. 
-          Chances are if it's broke, we can fix it. Give us a call 
-          today and one of our technicians will arrive and diagnose the problem. 
-          Provide insight and offer a solution. We are at your services. 
+        <p>With decades of experience solving the common home repair problem BRM has you covered. Chances are if it's broke, we can fix it. Give us a call today and one of our technicians will arrive and diagnose the problem. Provide insight and offer a friendly solution. We are at your service! 
         </p>
       </div>
       <div class="ad-title">
@@ -190,7 +185,7 @@
 
     <div class="section-header">
       <h2 class="display-6">Services</h2>
-      <p>BRM  provides residential and commercial repair, building and maintenance. With over 20 years in the industry BRM has you covered. Licensed and insured providing the Western PA area quality craftsmanship and affordable pricing. Call or connect with us today for a FREE estimate.</p>
+      <p>BRM provides residential and commercial repair, building and maintenance. We solve those common home repair and maintenance problems as well as full service remodel projects, inspection and consulting. With decades of experience in the industry BRM has you covered. We are licensed and insured providing the Western PA area quality craftsmanship and affordable pricing. Call or connect with us today for a FREE estimate.</p>
     </div>
     <!-- CARD ROWS  -->
     <div class="row gy-4">
@@ -200,9 +195,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Custom decks</h5>
-              <img style="height:250px;" src="assets/gallery/custom-deck.jpg" class="card-img-top" alt="...">
+              <img style="height:250px;" src="assets/gallery/custom-deck.jpg" class="card-img-top" alt="Wood repairs of all sorts">
               <div class="card-body">
-              <p class="card-text">We repair all sorts of deck, handrail, posts and fences and more. Full service deck builds and fence installs. We repair and install anything wood.</p>
+              <p class="card-text">BRM builds and repairs all sorts of deck, handrail, posts and fences and more. Full service deck builds and fence installs. We repair and install anything wood.</p>
             </div>
             </div>
           </div>
@@ -213,7 +208,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bathrooms</h5>
-              <img style="height:250px;"  src="assets/gallery/bathroom1.jpg" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/bathroom1.jpg" class="card-img-top" alt="Bathroom remodeling">
               <div class="card-body">
               <p class="card-text">We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel</p>
             </div>
@@ -226,9 +221,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Painting</h5>
-              <img style="height:250px;"  src="assets/gallery/drywall1.jpg" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/drywall1.jpg" class="card-img-top" alt="Painting and Sealing">
               <div class="card-body">
-              <p class="card-text">We can fix your walls just right. Drywall repairs and painting to complete install, we've got you covered.</p>
+              <p class="card-text">We offer full service drywall patching and painting. Interior or exterior paint, stain, caulk or sealing available. Drywall and painting to complete install.</p>
             </div>
           </div>
         </div>
@@ -239,7 +234,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Kitchens</h5>
-              <img style="height:250px;"  src="assets/gallery/kitchen.png" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/kitchen.png" class="card-img-top" alt="Kitchen remodeling">
               <div class="card-body">
               <p class="card-text">We repair all things kitchen! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full kitchen remodel and appliance installation.</p>
             </div>
@@ -252,9 +247,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Handyman</h5>
-              <img style="height:250px;"  src="assets/gallery/siding-lift.png" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/siding-lift.png" class="card-img-top" alt="Handyman services">
               <div class="card-body">
-              <p class="card-text">Need something fixed or repaired, maybe even hung on a wall? We can help - we install your products! We also access steep and tall.</p>
+              <p class="card-text">Need something fixed or repaired, maybe even hung on a wall? We can help - we install your products! We also access steep and tall and repair those common home problems.</p>
             </div>
           </div>
         </div>
@@ -265,9 +260,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Custom Decks</h5>
-              <img style="height:250px;"  src="assets/gallery/custom-deck2.jpg" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/custom-deck2.jpg" class="card-img-top" alt="Deck builds by BRM">
               <div class="card-body">
-              <p class="card-text">We repair all sorts of deck, handrail, posts and fences and more. Full service deck builds and fence installs. We repair and install anything wood.</p>
+              <p class="card-text">Enjoy your new outdoor space with a new deck by BRM. We offer full service deck builds, fence installation, posts, handrails and more. We repair and install anything wood.</p>
             </div>
           </div>
         </div>
@@ -278,9 +273,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Windows and doors</h5>
-              <img style="height:250px;"  src="assets/gallery/windows.png" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/windows.png" class="card-img-top" alt="Windows and doors by BRM">
               <div class="card-body">
-              <p class="card-text">We repair and install all sorts of exterior items including wood, trim and resealing. We also provide full replacements.</p>
+              <p class="card-text">Leaking or drafty windows or doors, We repair and install all sorts of exterior items including windows, doors, mailboxes, wood trim and complete resealing.</p>
             </div>
           </div>
         </div>
@@ -291,9 +286,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Installations</h5>
-              <img style="height:250px;"  src="assets/gallery/carport.png" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/carport.png" class="card-img-top" alt="Installation services by BRM">
               <div class="card-body">
-              <p class="card-text">Have a product a need it installed or assemblied, maybe even hung on a wall? We can help. BRM installs shelves, applicances, tvs and more. </p>
+              <p class="card-text">Have a product and just need it installed or assemblied, maybe even hung on a wall? We can help. BRM installs shelves, desks, applicances, tvs and more. </p>
             </div>
           </div>
         </div>
@@ -304,9 +299,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Drywall</h5>
-              <img style="height:250px;"  src="assets/gallery/drywall-finish.jpg" class="card-img-top" alt="...">
+              <img style="height:250px;"  src="assets/gallery/drywall-finish.jpg" class="card-img-top" alt="Drywall repairs">
               <div class="card-body">
-              <p class="card-text">We can fix your walls just right. Drywall repairs and painting to complete install, we've got you covered.</p>
+              <p class="card-text">BRM offers complete drywall services. Drywall installation and finishing options available. We repair those pesky stains and offer painting.</p>
             </div>
           </div>
         </div>
@@ -375,7 +370,7 @@
       <div class="modal-body">
         <div class="schedule-message" id="schedule">
           <h5>Scheduling unavailable</h5>
-          <p>Please call the office at (724) 787-3758 or send us a message</p>
+          <p>Please call the office at <strong>(724) 787-3758</strong> or send us a message with your information and we will be in contact.</p>
           <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
         </div>
       </div>
